assets/css/main.css
/* ... */
		#sidebar > :first-child {
			border-top: 0;
			margin-top: 0;
			padding-top: 0;
		}

		@media screen and (max-width: 1280px) {

			#sidebar {
				border-top: solid 1px rgba(160, 160, 160, 0.3);
				margin: 3em 0 0 0;
				min-width: 0;
				padding: 3em 0 0 0;
				width: 100%;
			}

		}

/* Intro */

	#intro .logo {
		border-bottom: 0;
		display: inline-block;
		margin: 0 0 1em 0;
		overflow: hidden;
		position: relative;
		/* width: 4em; */
    /* width: 6em; */
    width: 16em;
    height: 16em;
	}

		#intro .logo:before {
			/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200px' height='200px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%23f4f4f4' /%3E%3Cpolygon points='0,100 100,100 100,75 50,100 0,75' style='fill:%23f4f4f4' /%3E%3C/svg%3E"); */
      /* This changed version fixes artifacts on some HDPI screens. */
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='500px' height='500px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%23f4f4f4' /%3E%3Cpolygon points='0,100 105,105 100,75 50,100 0,75' style='fill:%23f4f4f4' /%3E%3C/svg%3E");
			background-position: top left;
			background-repeat: no-repeat;
			background-size: 100% 100%;
			content: '';
			display: block;
			height: 100.1%;   /* Yes the .1 is necessary to avoid a 1px glitch on the bottom. */
			left: 0;
			position: absolute;
			top: 0;
			width: 100%;
		}

		#intro .logo img {
			display: block;
			margin-left: -0.25em;
			/* width: 4.5em; */
      /* width: 6.75em; */
      width: 16em;
      height: 16em;
		}

	#intro header h2 {
		font-size: 2em;
		font-weight: 900;
	}

	#intro header p {
		font-size: 0.8em;
	}

	@media screen and (max-width: 1280px) {

		#intro {
			margin: 0 0 3em 0;
			text-align: center;
		}

			#intro header h2 {
				font-size: 2em;
			}

			#intro header p {
				font-size: 0.7em;
			}

	}

	@media screen and (max-width: 736px) {

		#intro {
			margin: 0 0 1.5em 0;
			padding: 1.25em 0; !ij
		}

			#intro > :last-child {
				margin-bottom: 0;
			}

			#intro .logo {
				margin: 0 0 0.5em 0;
			}

			#intro header h2 {
				font-size: 1.25em;
			}

			#intro header > :last-child {
				margin-bottom: 0;
			}

	}

/* Color customization for publications */
.paper h3 {
	padding: 0 0 0 0.75em;
}

.paper img {
	margin: 0;
}

h3 a {
	/* Andrei disabled all-caps for paper titles, and reset the ugly letter spacing only necessary for caps. */
	text-transform: none;
	letter-spacing: 0;
	color: black;
}

/* Badge color based on the free version of the Argon design system (Creative Tim),
   based, in turn, on Bootstrap. */

a:hover {
	color: blue !important;
	border-bottom: solid 1px blue;
}

div.paper img {
	width: 100%;
	float: left;
}

.badge {
	display: inline-block;
	padding: .25rem .375rem;
	font-size: 80%;
	font-weight: 600;
	text-align: center;
	vertical-align: baseline;
	white-space: nowrap;
	line-height: 1;
	border-radius: .25rem;
	transition: all .15s ease;
	background: #5e72e4;
	color: #fff;
}

.badge:hover {
	background: #324cdd;
}

a.badge {
	border: 0 !important;
}

a.badge:hover {
	border: 0 !important;
	color: #eee !important;
}

.pdf {
	/* Default color */
}

.pdf:hover {
	/* Default color */
}

.bibtex {
	background: #2dce89;
}

.bibtex:hover {
	background: #24a46d;
}

.poster {
	background: #11cdef;
}
.poster:hover {
	background: #0da5c0;
}

.slides {
	background: #172b4d;
}

.slides:hover {
	background: #0b1526;
}

.code {
	/* Code is awesome, make it orange so it pops! */
	background: #fb6340
}

.code:hover {
	background: #fa3a0e;
}

.new {
	background: #f5365c
}
.new:hover {
	background: #ec0c38;
}

.video {
	background: #f4f5f7;
	color: #32325d;
}
.video:hover {
	background: #d6dae2;
	color: #212529;
}

/* Footer */

	#footer .icons {
		color: #aaaaaa;
	}

  #superfooter {
    margin: 0;
  }

  #superfooter>div {
    margin: auto;
  }

	#footer .copyright, #superfooter .copyright {
		color: #aaaaaa;
    font-family: "Raleway", Helvetica, 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
		font-size: 0.5em;
		font-weight: 400;
		letter-spacing: 0.25em;
		text-transform: uppercase;
	}

/* Menu */

	#menu {
		-moz-transform: translateX(25em);
		-webkit-transform: translateX(25em);
		-ms-transform: translateX(25em);
		transform: translateX(25em);
		-moz-transition: -moz-transform 0.5s ease, visibility 0.5s;
		-webkit-transition: -webkit-transform 0.5s ease, visibility 0.5s;
		-ms-transition: -ms-transform 0.5s ease, visibility 0.5s;
		transition: transform 0.5s ease, visibility 0.5s;
		-webkit-overflow-scrolling: touch;
		background: #ffffff;
		border-left: solid 1px rgba(160, 160, 160, 0.3);
		box-shadow: none;
		height: 100%;
		max-width: 80%;
		overflow-y: auto;
		position: fixed;
		right: 0;
		top: 0;
		visibility: hidden;
		width: 25em;
		z-index: 10002;
	}

		#menu > * {
			border-top: solid 1px rgba(160, 160, 160, 0.3);
			padding: 3em;
		}

			#menu > * > :last-child {
				margin-bottom: 0;
			}

		#menu > :first-child {
			border-top: 0;
		}

		#menu .links {
			list-style: none;
			padding: 0;
		}

			#menu .links > li {
				border: 0;
				border-top: dotted 1px rgba(160, 160, 160, 0.3);
				margin: 1.5em 0 0 0;
				padding: 1.5em 0 0 0;
			}

				#menu .links > li a {
					display: block;
					border-bottom: 0;
				}

					#menu .links > li a h3 {
						-moz-transition: color 0.2s ease;
						-webkit-transition: color 0.2s ease;
						-ms-transition: color 0.2s ease;
						transition: color 0.2s ease;
						font-size: 0.7em;
					}
/* ... */

